Introduced Batch Install
Fixes #42
Fixes #6